--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -1,10 +1,8 @@
 name: Swift
 
 on:
-  push:
-    branches: [ main ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, develop ]
 
 jobs:
   build:
